Fix answer section scrollbar

--- a/src/styles/answerSection.module.css
+++ b/src/styles/answerSection.module.css
@@ -1,8 +1,9 @@
 .answerSection {  
   display: flex;
   justify-content: center;
-  overflow: auto;
+  overflow-y: auto;
   flex-direction: column;
+  flex: 1;
 }
 
 .userInput {
@@ -10,4 +11,5 @@
   padding: 25px;
   border-radius: 25px;
   margin-left: 10%;
+  padding-top: 50px;
 }
