--- a/src/styles/chatInterface.module.css
+++ b/src/styles/chatInterface.module.css
@@ -3,14 +3,15 @@
   width: 100%;
   justify-content: center;
   align-items: end;
-  margin-top: 0;
-  position: fixed;
+  margin-top: auto;
+  /* position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
   background-color: white;
   z-index: 1000;
   padding-bottom: 50px;
+  padding: 20px;
 }
 
 .chatInterface textarea {
